--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -10,123 +10,6 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
     <LinearLayout
-        android:gravity="top"
-        android:layout_gravity="top"
-        android:orientation="vertical"
-        android:id="@+id/backcontroller"
-        android:visibility="visible"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <LinearLayout
-            android:layout_gravity="top"
-            android:orientation="horizontal"
-            android:background="@drawable/shape_dialog_filter_bg_1"
-            android:layout_width="fill_parent"
-            android:layout_height="240.0px"
-            android:layout_marginTop="0.0px"
-            android:minWidth="270.0px"/>
-        <LinearLayout
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone"
-            android:layout_width="fill_parent"
-            android:layout_height="0.0dip">
-            <ImageView
-                android:id="@+id/iv_play"
-                android:background="@drawable/vod_pause"
-                android:visibility="gone"
-                android:layout_width="120.0sp"
-                android:layout_height="120.0sp"/>
-        </LinearLayout>
-        <TextView
-            android:textSize="@dimen/vs_100"
-            android:textColor="@color/color_90000000"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="许大师占位"
-            android:singleLine="true"
-            android:layout_weight="1.0"/>
-        <LinearLayout
-            android:gravity="bottom"
-            android:layout_gravity="bottom"
-            android:orientation="vertical"
-            android:background="@drawable/shape_dialog_filter_bg"
-            android:paddingLeft="10.0dip"
-            android:paddingTop="0.0dip"
-            android:paddingRight="10.0dip"
-            android:paddingBottom="0.0dip"
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/vs_300"
-            android:layout_marginLeft="@dimen/vs_0"
-            android:layout_marginRight="@dimen/vs_0"
-            android:layout_marginBottom="@dimen/vs_0">
-            <TextView
-                android:textSize="@dimen/vs_150"
-                android:textColor="@color/color_90000000"
-                android:id="@+id/ll_right_top_huikan"
-                android:paddingRight="@dimen/vs_10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/vs_5"
-                android:text="许大师占位"
-                android:singleLine="true"
-                android:layout_weight="1.0"
-                android:layout_marginEnd="@dimen/vs_5"/>
-            <LinearLayout
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="10.0dip"
-                android:paddingTop="0.0dip"
-                android:paddingRight="10.0dip"
-                android:paddingBottom="0.0dip"
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/vs_150"
-                android:layout_marginLeft="@dimen/vs_0"
-                android:layout_marginRight="@dimen/vs_0"
-                android:layout_marginBottom="@dimen/vs_0">
-                <ImageView
-                    android:id="@+id/iv_playpause"
-                    android:background="@drawable/vod_pause"
-                    android:layout_width="30.0dip"
-                    android:layout_height="30.0dip"/>
-                <TextView
-                    android:textColor="#ffffffff"
-                    android:id="@+id/tv_currentpos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10.0dip"
-                    android:layout_marginRight="5.0dip"
-                    android:text="00:00:00"/>
-                <SeekBar
-                    android:id="@+id/pb_progressbar"
-                    android:padding="6.0dip"
-                    android:paddingLeft="5.0dip"
-                    android:paddingRight="5.0dip"
-                    android:layout_width="0.0dip"
-                    android:layout_height="30.0dip"
-                    android:maxHeight="3.0dip"
-                    android:max="100"
-                    android:progress="30"
-                    android:progressDrawable="@drawable/shape_player_control_vod_seek"
-                    android:minHeight="3.0dip"
-                    android:thumb="@drawable/transparent"
-                    android:thumbOffset="0.0dip"
-                    android:layout_weight="1.0"
-                    android:paddingStart="5.0dip"
-                    android:paddingEnd="5.0dip"/>
-                <TextView
-                    android:textColor="#ffffffff"
-                    android:id="@+id/tv_duration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5.0dip"
-                    android:text="00:00:00"/>
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
         android:gravity="center_vertical"
         android:layout_gravity="left"
         android:orientation="horizontal"
@@ -484,7 +367,7 @@
             <FrameLayout
                 android:layout_gravity="center"
                 android:layout_width="@dimen/vs_200"
-                android:layout_height="100mm"
+                android:layout_height="100.0mm"
                 android:layout_marginLeft="@dimen/vs_0"
                 android:layout_marginTop="@dimen/vs_0"
                 android:layout_marginRight="@dimen/vs_0">
@@ -521,76 +404,76 @@
         </LinearLayout>
         <TextView
             android:textSize="@dimen/ts_30"
+            android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:gravity="center"
-            android:textStyle="bold"
-            android:shadowColor="#cc000000"
-            android:shadowDx="5.0"
-            android:shadowRadius="5.0"
             android:id="@+id/tv_current_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_0"
-            android:layout_marginTop="167mm"
+            android:layout_marginTop="167.0mm"
             android:text=""
-            android:layout_toRightOf="@+id/channelinfo"/>
-        <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
-            android:textSize="@dimen/ts_30"
-            android:textColor="@color/color_FFFFFF"
-            android:ellipsize="marquee"
-            android:textStyle="bold"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
+            android:layout_toRightOf="@+id/channelinfo"/>
+        <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
+            android:textSize="@dimen/ts_30"
+            android:textStyle="bold"
+            android:textColor="@color/color_FFFFFF"
+            android:ellipsize="marquee"
             android:id="@+id/tv_current_program_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="暂无信息"
             android:singleLine="true"
+            android:shadowColor="#cc000000"
+            android:shadowDx="5.0"
+            android:shadowRadius="5.0"
             android:layout_toRightOf="@+id/tv_current_program"
             android:layout_alignTop="@+id/tv_current_program"/>
         <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
             android:textSize="@dimen/ts_30"
+            android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:ellipsize="marquee"
-            android:textStyle="bold"
-            android:shadowColor="#cc000000"
-            android:shadowDx="5.0"
-            android:shadowRadius="5.0"
             android:id="@+id/tv_current_program_name"
             android:paddingRight="@dimen/vs_20"
-            android:layout_width="590mm"
+            android:layout_width="590.0mm"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30mm"
+            android:layout_marginLeft="30.0mm"
             android:layout_marginRight="@dimen/vs_20"
             android:text=""
             android:singleLine="true"
+            android:shadowColor="#cc000000"
+            android:shadowDx="5.0"
+            android:shadowRadius="5.0"
             android:layout_toRightOf="@+id/tv_current_program_time"
             android:layout_alignTop="@+id/tv_current_program"
             android:marqueeRepeatLimit="marquee_forever"/>
         <View
+            android:textStyle="bold"
             android:id="@+id/view_line"
             android:background="#ff9e9e9e"
             android:layout_width="wrap_content"
-            android:layout_height="5mm"
+            android:layout_height="5.0mm"
             android:layout_marginTop="17.0px"
+            android:layout_marginRight="48.0mm"
             android:layout_marginBottom="20.0px"
-            android:layout_marginRight="48mm"
-            android:textStyle="bold"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
-            android:layout_alignLeft="@+id/tv_current_program"
-            android:layout_below="@+id/tv_current_program_name"/>
+            android:layout_below="@+id/tv_current_program_name"
+            android:layout_alignLeft="@+id/tv_current_program"/>
         <TextView
             android:textSize="@dimen/ts_26"
+            android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:id="@+id/tv_next_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/vs_30"
             android:text=""
-            android:textStyle="bold"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
@@ -599,47 +482,47 @@
             android:layout_alignParentBottom="true"/>
         <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
             android:textSize="@dimen/ts_26"
+            android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:ellipsize="marquee"
             android:id="@+id/tv_next_program_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="暂无信息"
-            android:textStyle="bold"
+            android:singleLine="true"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
-            android:singleLine="true"
             android:layout_toRightOf="@+id/tv_next_program"
             android:layout_alignTop="@+id/tv_next_program"/>
         <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
             android:textSize="@dimen/ts_26"
+            android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:ellipsize="marquee"
             android:id="@+id/tv_next_program_name"
             android:paddingRight="@dimen/vs_20"
-            android:layout_width="630mm"
+            android:layout_width="630.0mm"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30mm"
+            android:layout_marginLeft="30.0mm"
             android:layout_marginRight="@dimen/vs_20"
             android:text=""
-            android:textStyle="bold"
+            android:singleLine="true"
             android:shadowColor="#cc000000"
             android:shadowDx="5.0"
             android:shadowRadius="5.0"
-            android:singleLine="true"
             android:layout_toRightOf="@+id/tv_next_program_time"
             android:layout_alignTop="@+id/tv_next_program"
             android:marqueeRepeatLimit="marquee_forever"
             android:layout_alignEnd="@+id/tv_current_program_name"/>
         <TextView
             android:textSize="@dimen/vs_20"
+            android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
             android:id="@+id/tv_source"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="176mm"
+            android:layout_marginTop="176.0mm"
             android:layout_marginRight="@dimen/vs_50"
             android:layout_marginBottom="@dimen/vs_0"
             android:text="源 1/1"
@@ -651,14 +534,14 @@
             android:ellipsize="marquee"
             android:layout_gravity="center"
             android:id="@+id/live_icon_null_text"
-            android:layout_marginTop="60mm"
-            android:layout_marginRight="@dimen/vs_50"
-            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="60.0mm"
+            android:layout_marginRight="@dimen/vs_50"
             android:maxLines="1"
+            android:singleLine="true"
             android:layout_alignTop="@+id/tv_source"
-            android:singleLine="true"/>
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
     <TextView
         android:layout_gravity="end|center|top"
@@ -730,6 +613,122 @@
             android:layout_toRightOf="@+id/tv_right_top_channel_name"
             android:layout_marginEnd="@dimen/vs_5"/>
     </RelativeLayout>
+    <LinearLayout
+        android:gravity="top"
+        android:layout_gravity="top"
+        android:orientation="vertical"
+        android:id="@+id/backcontroller"
+        android:visibility="visible"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <LinearLayout
+            android:layout_gravity="top"
+            android:orientation="horizontal"
+            android:background="@drawable/shape_dialog_filter_bg_1"
+            android:layout_width="fill_parent"
+            android:layout_height="240.0px"
+            android:layout_marginTop="0.0px"
+            android:minWidth="270.0px"/>
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_width="fill_parent"
+            android:layout_height="0.0dip">
+            <ImageView
+                android:id="@+id/iv_play"
+                android:background="@drawable/vod_pause"
+                android:visibility="gone"
+                android:layout_width="120.0sp"
+                android:layout_height="120.0sp"/>
+        </LinearLayout>
+        <TextView
+            android:textSize="@dimen/vs_100"
+            android:textColor="@color/color_90000000"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="许大师占位"
+            android:singleLine="true"
+            android:layout_weight="1.0"/>
+        <LinearLayout
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
+            android:paddingLeft="10.0dip"
+            android:paddingTop="0.0dip"
+            android:paddingRight="10.0dip"
+            android:paddingBottom="0.0dip"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/vs_300"
+            android:layout_marginLeft="@dimen/vs_0"
+            android:layout_marginRight="@dimen/vs_0"
+            android:layout_marginBottom="@dimen/vs_0">
+            <TextView
+                android:textSize="@dimen/vs_150"
+                android:textColor="@color/color_90000000"
+                android:id="@+id/ll_right_top_huikan"
+                android:paddingRight="@dimen/vs_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/vs_5"
+                android:text="许大师占位"
+                android:singleLine="true"
+                android:layout_weight="1.0"
+                android:layout_marginEnd="@dimen/vs_5"/>
+            <LinearLayout
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="150.0dip"
+                android:paddingTop="0.0dip"
+                android:paddingRight="20.0dip"
+                android:paddingBottom="0.0dip"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/vs_150"
+                android:layout_marginLeft="@dimen/vs_0"
+                android:layout_marginRight="@dimen/vs_0"
+                android:layout_marginBottom="@dimen/vs_0">
+                <ImageView
+                    android:id="@+id/iv_playpause"
+                    android:background="@drawable/vod_pause"
+                    android:layout_width="30.0dip"
+                    android:layout_height="30.0dip"/>
+                <TextView
+                    android:textColor="#ffffffff"
+                    android:id="@+id/tv_currentpos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10.0dip"
+                    android:layout_marginRight="5.0dip"
+                    android:text="00:00:00"/>
+                <SeekBar
+                    android:id="@+id/pb_progressbar"
+                    android:padding="6.0dip"
+                    android:paddingLeft="5.0dip"
+                    android:paddingRight="5.0dip"
+                    android:layout_width="0.0dip"
+                    android:layout_height="30.0dip"
+                    android:maxHeight="3.0dip"
+                    android:max="100"
+                    android:progress="30"
+                    android:progressDrawable="@drawable/shape_player_control_vod_seek"
+                    android:minHeight="3.0dip"
+                    android:thumb="@drawable/transparent"
+                    android:thumbOffset="0.0dip"
+                    android:layout_weight="1.0"
+                    android:paddingStart="5.0dip"
+                    android:paddingEnd="5.0dip"/>
+                <TextView
+                    android:textColor="#ffffffff"
+                    android:id="@+id/tv_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5.0dip"
+                    android:text="00:00:00"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:gravity="center"
         android:layout_gravity="center|right|top"
