--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1511,5 +1511,14 @@
         <item name="android:clickable">true</item>
         <item name="android:drawablePadding">10.0dip</item>
         <item name="android:radius">10.0dip</item>
-    </style>
+    </style>   
+    <style name="progressbarStyle_Xu" parent="android:Widget.ProgressBar.Horizontal">  
+        <item name="android:indeterminate">true</item>  
+        <item name="android:progressDrawable">@drawable/progress_bar_xu</item>  
+        <item name="android:indeterminateDrawable">@drawable/progress_bar_xu</item>  
+        <item name="android:minHeight">9mm</item>  
+        <item name="android:indeterminateDuration">400</item> 
+        <item name="android:maxHeight">9mm</item>  
+        <item name="android:indeterminateBehavior">cycle</item> 
+    </style>  
 </resources>
