--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -1,83 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:background="@drawable/shape_user_focus"
+    android:padding="@dimen/vs_1"
+    android:focusable="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_user_focus"
-    android:focusable="true"
-    android:padding="@dimen/vs_1">
-
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <FrameLayout
         android:layout_width="@dimen/vs_214"
         android:layout_height="@dimen/vs_280">
-
         <ImageView
             android:id="@+id/ivThumb"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:padding="@dimen/vs_1"
-            android:scaleType="fitXY" />
-
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"/>
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_5"
             android:layout_marginTop="@dimen/vs_5"
-            android:layout_marginRight="@dimen/vs_5"
-            android:orientation="horizontal">
-
+            android:layout_marginRight="@dimen/vs_5">
             <TextView
-                android:id="@+id/tvSite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/vs_5"
-                android:layout_marginRight="@dimen/vs_5"
-                android:background="@drawable/shape_thumb_year"
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
                 android:ellipsize="end"
                 android:gravity="center"
+                android:id="@+id/tvSite"
+                android:background="@drawable/shape_thumb_year"
                 android:paddingLeft="@dimen/vs_5"
                 android:paddingRight="@dimen/vs_5"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="vertical"
-            android:padding="@dimen/vs_1">
-
-            <TextView
-                android:id="@+id/tvNote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/vs_5"
+                android:singleLine="true"
+                android:layout_marginEnd="@dimen/vs_5"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
+            android:padding="@dimen/vs_1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="@dimen/ts_20"
+                android:textColor="@android:color/white"
+                android:ellipsize="end"
+                android:gravity="center"
                 android:layout_gravity="bottom"
+                android:id="@+id/tvNote"
+                android:background="@drawable/shape_thumb_note"
+                android:paddingLeft="@dimen/vs_5"
+                android:paddingRight="@dimen/vs_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/vs_5"
                 android:layout_marginRight="@dimen/vs_5"
                 android:layout_marginBottom="@dimen/vs_5"
-                android:background="@drawable/shape_thumb_note"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:paddingLeft="@dimen/vs_5"
-                android:paddingRight="@dimen/vs_5"
-                android:singleLine="true"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_20" />
-
+                android:singleLine="true"/>
             <TextView
-                android:id="@+id/tvName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_thumb_bottom_name"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:padding="@dimen/vs_5"
-                android:singleLine="true"
+                android:textSize="@dimen/ts_22"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/ts_22" />
+                android:ellipsize="marquee"
+                android:id="@+id/tvName"
+                android:background="@drawable/shape_thumb_bottom_name"
+                android:padding="@dimen/vs_5"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"/>
         </LinearLayout>
     </FrameLayout>
 </FrameLayout>
